Fix news container overflow

--- a/react-app/src/stylesheets/AllNews.css
+++ b/react-app/src/stylesheets/AllNews.css
@@ -1,5 +1,4 @@
 .app-home-news-container {
-    height: 100%;
     width: 100%;
     /* display: flex; */
     padding: 3.6rem 0;
