--- a/react-app/src/stylesheets/AppHome.css
+++ b/react-app/src/stylesheets/AppHome.css
@@ -9,6 +9,7 @@
     max-width: 141.6rem;
     display: flex;
     padding: 3.6rem 3rem;
+    padding-bottom: 0;
 }
 
 .app-home-left {
